--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,14 @@ name = "auth-microservice"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.115.0",
+    "httpx>=0.27.2",
+    "pytest>=8.3.3",
     "sqlmodel>=0.0.22",
+    "uvicorn>=0.31.0",
 ]
+
+[tool.pytest.ini_options]
+pythonpath = ["./src"]
